fixed overflowing width

--- a/src/components/GridTracks/styles.css
+++ b/src/components/GridTracks/styles.css
@@ -1,6 +1,8 @@
 
 
-
+*{
+    border: 1px red solid;
+}
 .wrapper{
     display: flex;
 
